[gd_scene load_steps=4 format=3 uid="uid://dhdtvyybpgb7j"]

[ext_resource type="Script" path="res://storePass.gd" id="1_blhmt"]
[ext_resource type="Script" path="res://newLine.gd" id="2_nomf4"]
[ext_resource type="Texture2D" uid="uid://bplxluutmiroy" path="res://Resources/review bg 5.png" id="3_o0wmj"]

[node name="storePass" type="Node2D"]
script = ExtResource("1_blhmt")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="username" type="LineEdit" parent="CanvasLayer"]
custom_minimum_size = Vector2(500, 0)
offset_left = 144.0
offset_top = 199.0
offset_right = 644.0
offset_bottom = 230.0
placeholder_text = "Username"
script = ExtResource("2_nomf4")

[node name="password" type="LineEdit" parent="CanvasLayer"]
custom_minimum_size = Vector2(500, 0)
offset_left = 144.0
offset_top = 239.0
offset_right = 644.0
offset_bottom = 270.0
placeholder_text = "Password"

[node name="sitename" type="LineEdit" parent="CanvasLayer"]
offset_left = 144.0
offset_top = 159.0
offset_right = 643.0
offset_bottom = 190.0
placeholder_text = "Website name/url"

[node name="submit" type="Button" parent="CanvasLayer"]
custom_minimum_size = Vector2(100, 25)
offset_left = 330.0
offset_top = 283.0
offset_right = 430.0
offset_bottom = 314.0
text = "Submit"

[node name="Button" type="Button" parent="CanvasLayer"]
offset_left = 324.0
offset_top = 350.0
offset_right = 440.0
offset_bottom = 384.0
theme_override_font_sizes/font_size = 18
text = "Go Back"

[node name="passSuccess" type="CanvasLayer" parent="."]
visible = false

[node name="Sprite2D" type="Sprite2D" parent="passSuccess"]
position = Vector2(400, 230)
scale = Vector2(0.65625, 0.641667)
texture = ExtResource("3_o0wmj")

[node name="Label" type="Label" parent="passSuccess"]
offset_left = 40.0
offset_top = 180.0
offset_right = 778.0
offset_bottom = 237.0
theme_override_font_sizes/font_size = 41
text = "Login has been inputted successfully!"

[node name="passFail" type="CanvasLayer" parent="."]
visible = false

[node name="Sprite2D" type="Sprite2D" parent="passFail"]
position = Vector2(400, 230)
scale = Vector2(0.65625, 0.641667)
texture = ExtResource("3_o0wmj")

[node name="Label" type="Label" parent="passFail/Sprite2D"]
offset_left = -411.429
offset_top = -109.091
offset_right = 638.571
offset_bottom = 153.909
theme_override_font_sizes/font_size = 73
text = "Login failed to store. 
Check for empty fields."

[connection signal="text_changed" from="CanvasLayer/username" to="." method="_on_username_text_changed"]
[connection signal="text_submitted" from="CanvasLayer/username" to="." method="_on_username_text_submitted"]
[connection signal="text_changed" from="CanvasLayer/password" to="." method="_on_password_text_changed"]
[connection signal="text_submitted" from="CanvasLayer/password" to="." method="_on_password_text_submitted"]
[connection signal="text_changed" from="CanvasLayer/sitename" to="." method="_on_sitename_text_changed"]
[connection signal="text_submitted" from="CanvasLayer/sitename" to="." method="_on_sitename_text_submitted"]
[connection signal="pressed" from="CanvasLayer/submit" to="." method="_on_submit_pressed"]
[connection signal="pressed" from="CanvasLayer/Button" to="." method="_on_button_pressed"]
